--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
 
     <title>Callidus</title>
 
@@ -24,7 +23,7 @@
   <body>
     
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-transparent position-fixed w-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent position-fixed w-100">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="scr/Callidus.png" alt="" width="61" height="61">
@@ -33,6 +32,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+
           <ul class="navbar-nav mx-auto">
             <li class="nav- mx-2">
               <a class="nav-link active" aria-current="page" href="#">BERANDA</a>
@@ -46,7 +46,8 @@
             <li class="nav- mx-2">
               <a class="nav-link" href="#">KONTAK</a>
             </li>
-          </ul>    
+          </ul>
+          
           <div class="#">
             <button class="button-primary">Daftar</button>
             <button class="button-secondary">Masuk</button>
@@ -98,9 +99,11 @@
           </div>
           <div class="col-md-5">
             <div class="card-cc">
-              <div class="img">
-                <img src="scr/Content Creator.png" alt="" width="250" height="250">
-              </div>
+              <a href="konten.html">
+                <div class="img">
+                  <img src="scr/Content Creator.png" alt="" width="250" height="250">
+                </div>
+              </a>
               <h4>Content Creator</h4>
           </div>
           </div>
@@ -177,8 +180,6 @@
     </section>
     <!-- akhir footer -->
 
-
-    <script src="js/script.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
